--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,6 +100,7 @@ input, select, textarea {
 
 	body {
 		background-color: #1e252d;
+		
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -177,7 +178,7 @@ input, select, textarea {
 
 	p {
 		text-align: justify;
-		margin: 0 0 2rem 0;
+		margin: 0 0 0 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2621,7 +2622,9 @@ input, select, textarea {
 		.image.fit {
 			display: block;
 			margin: 2.5rem 0;
-			width: 100%;
+			width: 50%;
+			margin-left: auto;
+    		margin-right: auto;
 		}
 
 			.image.fit:first-child {
@@ -2687,6 +2690,8 @@ input, select, textarea {
 		list-style: none;
 		margin-left: -1rem;
 		padding-left: 0;
+  		justify-content: right;
+  		margin: 15px;
 	}
 
 		ul.actions li {
@@ -4686,4 +4691,8 @@ input, select, textarea {
 			visibility: visible;
 		}
 
+	}
+	.obrot{
+	display: flex;
+	flex-direction: column-reverse; 
 	}
